# media

./: .editorconfig  .gitignore  1.cc  CMakeLists.txt  build.sh
include/base/: boost_log.h  bound_mpmc_queue.h  defer.h  epoch_reclaimer.h  function_ref.hpp  log.h  mpmc_queue.h  nocopyable.h  public.h  rwmutex.h  singleton.h  spinlock.h  stringhelper.h  stringview.h
include/ffmpeg/: ffmpeg_avformat.h  ffmpeg_avutil.h  ffmpeg_codec.h  ffmpeg_coder.h  ffmpeg_hwdevice.h  ffmpeg_init.h  ffmpeg_log.h  ffmpeg_swscale.h  ffmpeg_transcode.h
include/log/: async_logger.h  boost_async_logger.h  log_queue.h
include/media/: media.h  rtp.h  rtsp.h
include/media/sip/: sip_transport.h
include/net/: asio_socket.h  boost_httpserver.h  httpserver_base.h  socket_base.h
lib/FFmpeg-7.0.2/lib/: libavdevice.so.61.1.100  libavformat.so.61.1.100  libavutil.so.59.8.100  libpostproc.so.58.1.100  libswresample.so.5.1.100  libswscale.so.8.1.100
lib/FFmpeg-7.0.2/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
lib/FFmpeg-7.0.2/share/doc/ffmpeg/: developer.html  ffmpeg-all.html  ffmpeg-codecs.html  ffmpeg-devices.html  ffmpeg-formats.html  ffmpeg-utils.html  ffmpeg.html  ffplay-all.html  ffplay.html  ffprobe-all.html  general.html
lib/FFmpeg-7.0.2/share/man/man1/: ffmpeg-all.1  ffmpeg-codecs.1  ffmpeg-devices.1  ffmpeg-formats.1  ffmpeg-utils.1  ffmpeg.1  ffplay-all.1  ffplay.1  ffprobe-all.1
lib/boost_1_86_0/lib/: libboost_atomic.so.1.86.0  libboost_charconv.so.1.86.0  libboost_chrono.so.1.86.0  libboost_container.so.1.86.0  libboost_contract.so.1.86.0  libboost_coroutine.so.1.86.0  libboost_fiber.so.1.86.0  libboost_filesystem.so.1.86.0  libboost_graph.so.1.86.0  libboost_iostreams.so.1.86.0  libboost_json.so.1.86.0  libboost_locale.so.1.86.0  libboost_log.so.1.86.0  libboost_log_setup.so.1.86.0  libboost_math_c99.so.1.86.0  libboost_math_c99f.so.1.86.0  libboost_math_c99l.so.1.86.0  libboost_math_tr1.so.1.86.0  libboost_math_tr1f.so.1.86.0  libboost_math_tr1l.so.1.86.0  libboost_nowide.so.1.86.0  libboost_prg_exec_monitor.so.1.86.0  libboost_process.so.1.86.0  libboost_program_options.so.1.86.0  libboost_random.so.1.86.0  libboost_regex.so.1.86.0  libboost_serialization.so.1.86.0  libboost_stacktrace_addr2line.so.1.86.0  libboost_stacktrace_backtrace.so.1.86.0  libboost_stacktrace_basic.so.1.86.0  libboost_stacktrace_from_exception.so.1.86.0  libboost_thread.so.1.86.0  libboost_timer.so.1.86.0  libboost_type_erasure.so.1.86.0  libboost_unit_test_framework.so.1.86.0  libboost_url.so.1.86.0  libboost_wave.so.1.86.0  libboost_wserialization.so.1.86.0
lib/boost_1_86_0/lib/cmake/boost_atomic-1.86.0/: boost_atomic-config.cmake  libboost_atomic-variant-static.cmake
lib/boost_1_86_0/lib/cmake/boost_charconv-1.86.0/: boost_charconv-config.cmake  libboost_charconv-variant-static.cmake
lib/boost_1_86_0/lib/cmake/boost_chrono-1.86.0/: boost_chrono-config.cmake  libboost_chrono-variant-static.cmake
lib/boost_1_86_0/lib/cmake/boost_container-1.86.0/: boost_container-config.cmake  libboost_container-variant-static.cmake
lib/boost_1_86_0/lib/cmake/boost_context-1.86.0/: boost_context-config.cmake  libboost_context-variant-static.cmake
lib/boost_1_86_0/lib/cmake/boost_contract-1.86.0/: boost_contract-config.cmake  libboost_contract-variant-static.cmake
lib/boost_1_86_0/lib/cmake/boost_coroutine-1.86.0/: boost_coroutine-config.cmake  libboost_coroutine-variant-static.cmake
lib/boost_1_86_0/lib/cmake/boost_date_time-1.86.0/: boost_date_time-config.cmake  libboost_date_time-variant-static.cmake
lib/boost_1_86_0/lib/cmake/boost_exception-1.86.0/: boost_exception-config.cmake
lib/boost_1_86_0/lib/cmake/boost_fiber-1.86.0/: boost_fiber-config.cmake  libboost_fiber-variant-static.cmake
lib/boost_1_86_0/lib/cmake/boost_filesystem-1.86.0/: boost_filesystem-config.cmake  libboost_filesystem-variant-static.cmake
lib/boost_1_86_0/lib/cmake/boost_graph-1.86.0/: boost_graph-config.cmake  libboost_graph-variant-static.cmake
lib/ffmpeg_8_0/include/SDL2/: SDL_config.h
lib/ffmpeg_8_0/include/openssl/: configuration.h
lib/ffmpeg_8_0/lib/: libSDL2.la  libSDL2_test.la  libSDL2main.la  libasprintf.la  libfdk-aac.la  libfreetype.la  libgettextpo.la  libgif.so.7.2.0  libltdl.la  libmp3lame.la  libogg.la  libopencore-amrnb.la  libopencore-amrwb.la  libopus.la  libpcre.la  libpcrecpp.la  libpcreposix.la  libpng.la  libtextstyle.la  libtheora.la  libtheoradec.la  libtheoraenc.la  libtiff.la  libtiffxx.la  libvorbis.la  libvorbisenc.la  libvorbisfile.la  libzimg.la  libzmq.la  libzvbi-chains.la  libzvbi.la
lib/ffmpeg_8_0/lib/gettext/: cldr-plurals  hostname  urlget  user-email
lib/ffmpeg_8_0/lib/pkgconfig/: OpenCL.pc  SPIRV-Tools-shared.pc  SPIRV-Tools.pc  SvtAv1Enc.pc  aom.pc  dav1d.pc  fdk-aac.pc  freetype2.pc  haisrt.pc  libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libbrotlicommon.pc  libbrotlidec.pc  libbrotlienc.pc  libcrypto.pc  libhwy.pc  libjxl.pc  libjxl_cms.pc  libjxl_threads.pc  libpcre.pc  libpcrecpp.pc  libpcreposix.pc  libpng.pc  libsharpyuv.pc  libssl.pc  libswresample.pc  libswscale.pc  libtiff-4.pc  libwebp.pc  libwebpdecoder.pc  libwebpdemux.pc  libwebpmux.pc  libzmq.pc  lilv-0.pc  lv2.pc  ogg.pc  opencore-amrnb.pc  (+23 more)
lib/ffmpeg_8_0/sbin/: zvbid
lib/ffmpeg_8_0/share/autoconf/: autom4te.cfg
lib/ffmpeg_8_0/share/info/: dir
lib/ffmpeg_8_0/share/man/: index.db
lib/ffmpeg_8_0/share/pkgconfig/: OpenCL-Headers.pc
lib/json_1_9_6/lib/: libjsoncpp.so.1.9.6
src/: main.cpp
src/base/: epoch_reclaimer.cpp  log.cpp
src/ffmpeg/: ffmpeg_avformat.cpp  ffmpeg_avutil.cpp  ffmpeg_codec.cpp  ffmpeg_coder.cpp  ffmpeg_hwdevice.cpp  ffmpeg_init.cpp  ffmpeg_log.cpp  ffmpeg_swscale.cpp  ffmpeg_transcode.cpp
src/log/: async_logger.cpp  boost_async_logger.cpp
src/media/: rtp.cpp  rtsp.cpp
src/media/sip/: sip_transport.cpp
src/net/: boost_httpserver.cpp
test/: CMakeLists.txt  test_ffmpeg.cpp  test_ffmpeg2.cpp  test_ffmpeg_log.cpp  test_json_boost.cpp
(+191 files in other folders)
